--- a/fcloud-config/src/main/resources/bootstrap.yml
+++ b/fcloud-config/src/main/resources/bootstrap.yml
@@ -1,12 +1,12 @@
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
+
 spring:
-  application:
-    name: config-server 
   cloud:
     config:
       server:
         git:
           uri: ${config.repo.uri:https://github.com/wanghuu/spring-cloud-config.git}
           searchPaths: respo
-    
-server:
-  port: 8888
