--- a/fcloud-discovery/pom.xml
+++ b/fcloud-discovery/pom.xml
@@ -9,15 +9,13 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>fcloud-eureka</artifactId>
-    <packaging>jar</packaging>
+    <artifactId>fcloud-registry</artifactId>
+
     <dependencies>
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
     </dependencies>
-
-
 
 </project>
