--- a/fcloud-config-client/src/main/resources/bootstrap.yml
+++ b/fcloud-config-client/src/main/resources/bootstrap.yml
@@ -1,4 +1,7 @@
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
+spring:
+  cloud:
+    config:
+      uri: http://localhost:8888
+      discovery:
+        service-id: config-server
+        enabled: true
