--- a/fcloud-config-repo/application-dev.yml
+++ b/fcloud-config-repo/application-dev.yml
@@ -4,7 +4,7 @@ server:
     uri-encoding: UTF-8
     remote-ip-header: x-forwarded-for
   use-forward-headers: true
-
+  port: 0
 #redis配置
 redis:
   host: 127.0.0.1
