--- a/fcloud-config/src/main/resources/bootstrap.yml
+++ b/fcloud-config/src/main/resources/bootstrap.yml
@@ -4,4 +4,4 @@ spring:
       server:
         git:
           uri: ${config.repo.uri:https://github.com/wanghuu/fcloud.git}
-          searchPaths: fcloud-repo
+          searchPaths: fcloud-config-repo
