--- a/fcloud-common/fcloud-common-core/pom.xml
+++ b/fcloud-common/fcloud-common-core/pom.xml
@@ -11,5 +11,14 @@
 
     <artifactId>fcloud-common-core</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+    </dependencies>
 </project>
