--- a/fcloud-service/item-service/pom.xml
+++ b/fcloud-service/item-service/pom.xml
@@ -3,19 +3,22 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>fcloud</artifactId>
+        <artifactId>fcloud-service</artifactId>
         <groupId>me.frank</groupId>
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <packaging>pom</packaging>
-    <modules>
-        <module>fcloud-common-base</module>
-        <module>fcloud-common-core</module>
-    </modules>
-    <artifactId>fcloud-common</artifactId>
-    <description>公共模块</description>
 
+    <artifactId>item-service</artifactId>
+
+    <dependencies>
+        <dependency>
+            <groupId>me.frank</groupId>
+            <artifactId>fcloud-feign-item-api</artifactId>
+            <version>1.0</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 
 </project>
