--- a/fcloud-config-server/pom.xml
+++ b/fcloud-config-server/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>fcloud-config</artifactId>
+    <artifactId>fcloud-config-server</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
