--- a/fcloud-feign-api/fcloud-feign-user-api/pom.xml
+++ b/fcloud-feign-api/fcloud-feign-user-api/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>fcloud-feign-user-api</artifactId>
+    <packaging>jar</packaging>
 
 
 </project>
