--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,12 @@
                 <version>${guava.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web</artifactId>
+                <version>2.0.1.RELEASE</version>
+            </dependency>
+
             <!-- swagger cloud start -->
             <dependency>
                 <groupId>io.springfox</groupId>
